week3 20161029 选项卡 对应index查找

--- a/案例1.5.2选项卡.html
+++ b/案例1.5.2选项卡.html
@@ -78,7 +78,7 @@
                 aDiv[j].className = '';
             }
             this.className = 'selected';
-            aDiv[this.index].className = 'selected';
+            aDiv[this.index].className = 'selected';//
         }
     }
 
