--- a/考试/5_仿flash幻灯片效果.html
+++ b/考试/5_仿flash幻灯片效果.html
@@ -1,147 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+<head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>多级导航菜单</title>
     <style>
         *{
-            margin: 0;
-            padding: 0;
+            margin: 0px;
+            padding: 0px;
         }
-        ul{
+        li{
             list-style: none;
         }
-
         #container{
-            width: 400px;
-            margin: 100px auto;
+            width:400px;
+            margin:0 auto;
         }
-        #img-box{
+        #big-pic{
+            width:400px;
+            height:320px;
             position: relative;
-            width: 400px;
-            height: 320px;
         }
-        #img-box img{
+        #container ul li{
+            width:400px;
             position: absolute;
-            left: 0;
-            top:0;
+            top: 0;
+            left:0;
         }
-        #prev,#next{
+        #left{
             width: 200px;
-            height: 320px;
+            position: relative;
+        }
+        #left-btn{
             position: absolute;
             top:0;
-        }
-        #prev{
-            left:0;
-        }
-        #next{
-            right: 0;
-        }
-        #prev-btn,#next-btn{
-            position: absolute;
-            top:50%;
-            margin-top: -30px;
-            width: 60px;
-            height: 60px;
-            background-image:url("images/btn.gif") ;
-        }
-        #prev-btn{
-            left:10px;
-        }
-        #next-btn{
-            right: 10px;
-            background-position: 0 -60px;
-        }
-        #txt-box{
-            position: absolute;
-            bottom: 0;
-            left:0;
-            background: #000000;
-            opacity: 0.6;
-            filter:alpha(opacity = 60);
-            width: 100%;
-            height: 30px;
-            line-height: 30px;
-            color: #fff;
+            left: 0;
 
         }
-        #txt{
-            float: left;
-        }
-        #num{
-            float: right;
-        }
-        #small-box{
-            width: 400px;
-            background: #cccccc;
-            overflow: hidden;
-            padding: 10px 0;
-        }
-        #small-img{
-            width: 800px;
-        }
-        #small-img li{
-            float: left;
-            width: 120px;
-            height: 94px;
-            margin-left: 10px;
-        }
-        #small-img li img{
-            width: 120px;
-            height: 94px;
-        }
+
+
     </style>
 </head>
 <body>
-<div id="container">
-    <div id="img-box">
-        <ul>
-            <li><img src="images/1.jpg" alt=""/></li>
-            <li><img src="images/2.jpg" alt=""/></li>
-            <li><img src="images/3.jpg" alt=""/></li>
-            <li><img src="images/4.jpg" alt=""/></li>
-            <li><img src="images/5.jpg" alt=""/></li>
-            <li><img src="images/6.jpg" alt=""/></li>
-        </ul>
-
-        <div id="prev">
-            <span id="prev-btn"></span>
+    <div id="container">
+        <div id="big-pic">
+         <!-- ul>li*6>img{src=images/$.jpg}为什么不好使呢·-->
+            <ul>
+                <li><img src="images/1.jpg" alt=""></li>
+                <li><img src="images/2.jpg" alt=""></li>
+                <li><img src="images/3.jpg" alt=""></li>
+                <li><img src="images/4.jpg" alt=""></li>
+                <li><img src="images/5.jpg" alt=""></li>
+                <li><img src="images/6.jpg" alt=""></li>
+            </ul>
         </div>
-        <div id="next">
-            <span id="next-btn"></span>
+        <div id="left">
+            <span id="left-btn">
+                <img src="images/btn.gif" alt=""/>
+            </span>
         </div>
+        <div id="right">
+            <span id="right-btn">
 
-        <div id="txt-box">
-            <span id="txt">hhgg</span>
-            <div id="num">
-                <span>1</span>/
-                <span>6</span>
+            </span>
+        </div>
+        <div id="text">
+            <span id="text-left">123456</span>
+            <div>
+                <span id="number">1</span>/<span>6</span>
             </div>
         </div>
-    </div>
-    <div id="small-box">
-        <ul id="small-img">
-            <li><img src="images/1.jpg" alt=""/></li>
-            <li><img src="images/2.jpg" alt=""/></li>
-            <li><img src="images/3.jpg" alt=""/></li>
-            <li><img src="images/4.jpg" alt=""/></li>
-            <li><img src="images/5.jpg" alt=""/></li>
-            <li><img src="images/6.jpg" alt=""/></li>
-        </ul>
-    </div>
-</div>
-<script>
-    var oPrev = document.getElementById('prev');
-    var oPrev = document.getElementById('next');
 
-    oPrev.onmouseover = 'o function(){
-        animate(this{opacity:0});
-    }
-    oPrev.onmouseout = function(){
-        animate(this{opacity:1});
-    }
 
-</script>
+        <div id="small-pic">
+            <!--<ul>-->
+                <!--<li><img src="images/1.jpg" alt=""></img></li>-->
+                <!--<li><img src="images/2.jpg" alt=""></img></li>-->
+                <!--<li><img src="images/3.jpg" alt=""></img></li>-->
+                <!--<li><img src="images/4.jpg" alt=""></img></li>-->
+                <!--<li><img src="images/5.jpg" alt=""></img></li>-->
+                <!--<li><img src="images/6.jpg" alt=""></img></li>-->
+            <!--</ul>-->
+        </div>
+
+    </div>
 </body>
-</html>
